<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type" />

        <Spinner
            style="@style/ComboBox"
            android:id="@+id/SType"
            android:layout_width="match_parent"
            android:spinnerMode="dialog" />

        <LinearLayout
            android:id="@+id/LLShape"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shape" />

            <Spinner
                style="@style/ComboBox"
                android:id="@+id/SShape"
                android:layout_width="match_parent"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scale"/>

            <TextView
                android:id="@+id/TVScale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/SBScale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:min="50"
            android:max="150" />

        <LinearLayout
            android:id="@+id/LLRangeOptions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/range" />

            <Spinner
                style="@style/ComboBox"
                android:id="@+id/SRange"
                android:layout_width="match_parent"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orientation" />

            <RadioGroup
                android:id="@+id/RGOrientation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/RBHorizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/horizontal" />

                <RadioButton
                    android:id="@+id/RBVertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vertical" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/columns" />

            <com.winlator.star.widget.NumberPicker
                android:id="@+id/NPColumns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:minValue="3"
                app:maxValue="8" />
        </LinearLayout>

        <!-- Dynamic Stick Settings -->
        <LinearLayout
            android:id="@+id/LLDynamicStickSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detection_area"
                android:textStyle="bold"
                android:layout_marginTop="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/area_width"/>

                <TextView
                    android:id="@+id/TVAreaWidthStick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/SBAreaWidthStick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:min="200"
                android:max="2000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/area_height"/>

                <TextView
                    android:id="@+id/TVAreaHeightStick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/SBAreaHeightStick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:min="200"
                android:max="2000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stick_radius"/>

                <TextView
                    android:id="@+id/TVStickRadius"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/SBStickRadius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:min="60"
                android:max="400" />
        </LinearLayout>

        <!-- Mouse Area Settings -->
        <LinearLayout
            android:id="@+id/LLMouseAreaSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detection_area"
                android:textStyle="bold"
                android:layout_marginTop="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/area_width"/>

                <TextView
                    android:id="@+id/TVAreaWidthMouse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/SBAreaWidthMouse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:min="200"
                android:max="2000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/area_height"/>

                <TextView
                    android:id="@+id/TVAreaHeightMouse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/SBAreaHeightMouse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:min="200"
                android:max="2000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mouse_sensitivity"/>

                <TextView
                    android:id="@+id/TVMouseSensitivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <SeekBar
                android:id="@+id/SBMouseSensitivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:min="1"
                android:max="50" />
        </LinearLayout>

        <!-- Button Grid Settings -->
        <LinearLayout
            android:id="@+id/LLButtonGridSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Button Grid"
                android:textStyle="bold"
                android:layout_marginTop="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grid_rows" />

            <com.winlator.star.widget.NumberPicker
                android:id="@+id/NPGridRows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:minValue="1"
                app:maxValue="8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grid_cols" />

            <com.winlator.star.widget.NumberPicker
                android:id="@+id/NPGridCols"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:minValue="1"
                app:maxValue="16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cell Shape"
                android:layout_marginTop="8dp" />

            <Spinner
                android:id="@+id/SGridCellShape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LLBindings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <LinearLayout
            android:id="@+id/LLDPadBindings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/binding_up" />

            <Spinner
                style="@style/ComboBox"
                android:id="@+id/SBindingUp"
                android:layout_width="match_parent"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/binding_right" />

            <Spinner
                style="@style/ComboBox"
                android:id="@+id/SBindingRight"
                android:layout_width="match_parent"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/binding_down" />

            <Spinner
                style="@style/ComboBox"
                android:id="@+id/SBindingDown"
                android:layout_width="match_parent"
                android:spinnerMode="dialog" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/binding_left" />

            <Spinner
                style="@style/ComboBox"
                android:id="@+id/SBindingLeft"
                android:layout_width="match_parent"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/CBToggleSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toggle_switch" />

        <LinearLayout
            android:id="@+id/LLCustomTextIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_text" />

            <EditText
                style="@style/EditText"
                android:id="@+id/ETCustomText"
                android:maxLength="8"
                android:layout_width="match_parent"
                android:hint="@string/none"
                android:inputType="textCapCharacters" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp">

                <LinearLayout
                    android:id="@+id/LLIconList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" />
            </HorizontalScrollView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Custom Icons" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                android:layout_marginTop="4dp">
                
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageButton
                        android:id="@+id/BTAddCustomIcon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/icon_add" />
                    <LinearLayout
                        android:id="@+id/LLCustomIconList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" />
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </LinearLayout>
</ScrollView>




